Fix button size of table pager on ios

--- a/less/jquery-table-pager/table-pager-core.less
+++ b/less/jquery-table-pager/table-pager-core.less
@@ -10,7 +10,7 @@
     }
 
     .btn {
-        min-width: auto;
+        min-width: 1px;
         margin-top: 0;
         margin-bottom: 0;
     }
